--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,9 @@
           <img
             src="/image/avataaars.svg"
             alt="avatar-image"
-            class="w-25 mt-2"
+            class="w-25 mt-5 py-2"
           />
-          <div class="title py-2">
+          <div class="title py-3">
             <h2 class="">START FRAMEWORK</h2>
             <div
               class="icon d-flex flex-row justify-content-center align-items-center my-3"
