--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="row">
     <div class="container mx-auto py-5">
-      <div class="title py-4">
+      <div class="title py-4 mt-4">
         <h2 class="text-center mt-5">PORTFOLIO COMPONENT</h2>
         <div
           class="icon d-flex flex-row justify-content-center align-items-center my-3"
@@ -14,7 +14,7 @@
       <div
         class="items mx-auto row d-flex flex-row justify-content-center g-5 py-5"
       >
-        <div class="myItems col-md-4 mb-5">
+        <div class="myItems col-md-4 mb-3">
           <div class="contant position-relative mx-auto text-center">
             <img
               src="/image/poert1.png"
@@ -31,7 +31,7 @@
             </div>
           </div>
         </div>
-        <div class="myItems col-md-4">
+        <div class="myItems col-md-4 mb-3">
           <div class="contant position-relative mx-auto text-center">
             <img
               src="/image/port2.png"
@@ -48,7 +48,7 @@
             </div>
           </div>
         </div>
-        <div class="myItems col-md-4">
+        <div class="myItems col-md-4 mb-3">
           <div class="contant position-relative mx-auto text-center">
             <img
               src="/image/port3.png"
@@ -65,7 +65,7 @@
             </div>
           </div>
         </div>
-        <div class="myItems col-md-4">
+        <div class="myItems col-md-4 mb-3">
           <div class="contant position-relative mx-auto text-center">
             <img
               src="/image/poert1.png"
@@ -82,7 +82,7 @@
             </div>
           </div>
         </div>
-        <div class="myItems col-md-4">
+        <div class="myItems col-md-4 mb-3">
           <div class="contant position-relative mx-auto text-center">
             <img
               src="/image/port2.png"
@@ -99,7 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="myItems col-md-4">
+        <div class="myItems col-md-4 mb-3">
           <div class="contant position-relative mx-auto text-center">
             <img
               src="/image/port3.png"
@@ -134,11 +134,11 @@
       class="modal-body position-fixed top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center bg-primary bg-opacity-25"
     >
       <img [src]="currentImageSrc" alt="" class="imageLayer" />
-      <div class="closeIcon position-relative">
+      <!-- <div class="closeIcon position-relative">
         <i
-          class="fa-solid fa-xmark fa-2xl position-absolute end-0 text-white pe-4"
+          class="fa-solid fa-xmark fa-2xl position-absolute end-0 text-white pe-1"
         ></i>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
