--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,8 +1,8 @@
-<section class="d-flex align-items-center justify-content-center">
-  <div class="row">
+<section class="d-flex align-items-center justify-content-center py-5">
+  <div class="row py-5">
     <div class="container mx-auto py-5">
-      <div class="title py-4">
-        <h2 class="text-center mt-5">ABOUT COMPONENT</h2>
+      <div class="title py-5">
+        <h2 class="text-center my-5">ABOUT COMPONENT</h2>
         <div
           class="icon d-flex flex-row justify-content-center align-items-center my-3"
         >
@@ -15,7 +15,7 @@
         class="decsription d-flex flex-row justify-content-center px-5 text-white"
       >
         <div>
-          <p class="pe-5 pb-5 mb-5">
+          <p class="pb-5 mb-5 me-4 pe-4 mx-auto">
             Freelancer is a free bootstrap theme created by Route. The download
             includes the complete source files including HTML, CSS, and
             JavaScript as well as optional SASS stylesheets for easy
@@ -23,7 +23,7 @@
           </p>
         </div>
         <div>
-          <p class="pe-5 pb-5 mb-5">
+          <p class="pb-5 mb-5 pe-4 mx-auto">
             Freelancer is a free bootstrap theme created by Route. The download
             includes the complete source files including HTML, CSS, and
             JavaScript as well as optional SASS stylesheets for easy
