--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="row">
     <div class="container mx-auto py-5">
-      <div class="title py-4">
+      <div class="title py-4 mt-4">
         <h2 class="text-center mt-5">CONTACT COMPONENT</h2>
         <div
           class="icon d-flex flex-row justify-content-center align-items-center my-3"
