--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,14 +2,14 @@
   <div class="row upperFooter">
     <div class="container">
       <div
-        class="items d-flex flex-row justify-content-center align-items-center py-5"
+        class="row items d-flex flex-row justify-content-center align-items-center py-5"
       >
-        <div class="col-md-4 ps-5 text-center py-5">
+        <div class="col-md-4 text-center mx-auto py-5">
           <h3>LOCATION</h3>
           <p>2215 John Daniel Drive</p>
           <p>Clark, MO 65243</p>
         </div>
-        <div class="col-md-4 text-center py-5">
+        <div class="col-md-4 text-center mx-auto py-5">
           <h3>AROUND THE WEB</h3>
           <div
             class="d-flex flex-row justify-content-center align-items-center"
@@ -20,7 +20,7 @@
             <i class="fa-solid fa-globe fs-5"></i>
           </div>
         </div>
-        <div class="col-md-4 pe-5 text-center py-5">
+        <div class="col-md-4 text-center mx-auto py-5">
           <h3>ABOUT FREELANCER</h3>
           <p>
             Freelance is a free to use, licensed Bootstrap theme created by
