--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -7,6 +7,11 @@ nav {
   background-color: #2c3e50;
   transition: all 3ms;
 }
+/* nav .container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+} */
 .navbar.shrink {
   height: 70px;
 }
